[package]
name = "wspick"
version = "1.3.1"
authors = ["MnlPhlp <online@philipp-manuel.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "platform independent workspace picker for the terminal"
homepage = "https://github.com/MnlPhlp/wspick"
repository = "https://github.com/MnlPhlp/wspick"
keywords = ["cli", "project", "workspace", "picker", "manager"]
categories = ["command-line-utilities","command-line-interface","development-tools"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
directories = "5.0.1"
edit = "0.1.4"
inquire = "0.6.2"
serde = "1.0.164"
serde_derive = "1.0.164"
termsize = "0.1.6"
indexmap = { version = "2.0.0", features = ["serde"] }
toml = { version = "0.7.6", features = ["preserve_order"] }
doc_consts = { version = "0.1.0" }
